--- a/liferay/Dockerfile
+++ b/liferay/Dockerfile
@@ -1,29 +1,1 @@
-FROM ubuntu:16.04
-
-ENV DEBIAN_FRONTEND noninteractive
-ENV JAVA_HOME       /usr/lib/jvm/java-8-oracle
-ENV LANG            en_US.UTF-8
-ENV LC_ALL          en_US.UTF-8
-ENV LIFERAY_HOME   /opt/liferay
-ENV CATALINA_HOME  $LIFERAY_HOME/tomcat-9.0.10
-ENV PATH  $PATH:$CATALINA_HOME/bin
-
-RUN apt-get update && \
-  apt-get install -y --no-install-recommends locales && \
-  locale-gen en_US.UTF-8 && \
-  apt-get dist-upgrade -y && \
-  apt-get --purge remove openjdk* && \
-  echo "oracle-java8-installer shared/accepted-oracle-license-v1-1 select true" | debconf-set-selections && \
-  echo "deb http://ppa.launchpad.net/webupd8team/java/ubuntu xenial main" > /etc/apt/sources.list.d/webupd8team-java-trusty.list && \
-  apt-key adv --keyserver keyserver.ubuntu.com --recv-keys EEA14886 && \
-  apt-get update && \
-  apt-get install -y --no-install-recommends oracle-java8-installer oracle-java8-set-default && \
-  apt-get clean all
-
-COPY liferay $LIFERAY_HOME
-
-COPY portal-ext.properties $LIFERAY_HOME
-
-WORKDIR $CATALINA_HOME
-
-CMD ["catalina.sh", "run"]
+FROM liferay/portal-snapshot:7.1.x-201812071242-af6321a
